Fixed overflow issue with layouts

--- a/source/_sass/_layout/_grid.scss
+++ b/source/_sass/_layout/_grid.scss
@@ -6,13 +6,10 @@ html {
 
 body {
   margin: 0 auto;
-  max-height: 100vh;
   max-width: breakpoint(max);
 
   box-shadow: container(box-shadow, 4);
   background-color: color(mono, lightest);
-
-  overflow: hidden;
 }
 
 @each $label, $width in $breakpoint-map {
